Do not write QtWebKit's history data to temporary files anymore.

Note that this is yet another attempt at integrating Konqueror's history
navigation with QtWebKit's without causing a regression. This change should
finally put this never ending problem to rest without eating up a user's
disk space.

BUG: 284383
FIXED-IN: 1.3.0