src/kwebkitpartfactory.cpp
@@ -19,30 +19,16 @@
  */
 
 #include "kwebkitpartfactory.h"
+#include "kwebkitpart_ext.h"
 #include "kwebkitpart.h"
 
-#include <KDE/KApplication>
-#include <KDE/KStandardDirs>
-#include <KDE/KTemporaryFile>
 #include <KDE/KDebug>
 
 #include <QtGui/QWidget>
 
-KWebKitFactory::KWebKitFactory()
-               :m_discardSessionFiles(true)
-
-{
-    kDebug() << this;
-    KApplication *app = qobject_cast<KApplication*>(qApp);
-    if (app)
-        connect(app, SIGNAL(saveYourself()), SLOT(slotSaveYourself()));
-    else
-        kWarning() << "Invoked from a non-KDE application... Session management will NOT work properly!";
-}
-
 KWebKitFactory::~KWebKitFactory()
 {
-    kDebug() << this;
+    // kDebug() << this;
 }
 
 QObject *KWebKitFactory::create(const char* iface, QWidget *parentWidget, QObject *parent, const QVariantList &args, const QString& keyword)
@@ -51,49 +37,33 @@ QObject *KWebKitFactory::create(const char* iface, QWidget *parentWidget, QObjec
     Q_UNUSED(keyword);
     Q_UNUSED(args);
 
+    kDebug() << parentWidget << parent;
+    connect(parentWidget, SIGNAL(destroyed(QObject*)), this, SLOT(slotDestroyed(QObject*)));
+
     // NOTE: The code below is what makes it possible to properly integrate QtWebKit's
     // history management with any KParts based application.
-    QString tempFileName;
-    KTemporaryFile tempFile;
-    tempFile.setFileTemplate(KStandardDirs::locateLocal("data", QLatin1String("kwebkitpart/autosave/XXXXXX")));
-    tempFile.setSuffix(QLatin1String(""));
-    if (tempFile.open())
-        tempFileName = tempFile.fileName();
-
-    if (parentWidget) {
-        m_sessionFileLookup.insert(parentWidget, tempFileName);
-        connect (parentWidget, SIGNAL(destroyed(QObject*)), SLOT(slotDestroyed(QObject*)));
-    } else {
-        kWarning() << "No parent widget specified... Session management will FAIL to work properly!";
+    QByteArray histData (m_historyBufContainer.value(parentWidget));
+    if (!histData.isEmpty()) histData = qUncompress(histData);
+    KWebKitPart* part = new KWebKitPart(parentWidget, parent, histData);
+    WebKitBrowserExtension* ext = qobject_cast<WebKitBrowserExtension*>(part->browserExtension());
+    if (ext) {
+        connect(ext, SIGNAL(saveHistory(QObject*,QByteArray)), this, SLOT(slotSaveHistory(QObject*,QByteArray)));
     }
-
-
-    return new KWebKitPart(parentWidget, parent, QStringList() << tempFileName);
+    return part;
 }
 
-
-void KWebKitFactory::slotSaveYourself()
+void KWebKitFactory::slotSaveHistory(QObject* widget, const QByteArray& buffer)
 {
-    m_discardSessionFiles = false;
+    // kDebug() << "Caching history data from" << widget;
+    m_historyBufContainer.insert(widget, qCompress(buffer, 5));
 }
 
-void KWebKitFactory::slotDestroyed(QObject * obj)
+void KWebKitFactory::slotDestroyed(QObject* object)
 {
-    disconnect (obj, SIGNAL(destroyed(QObject*)), this, SLOT(slotDestroyed(QObject*)));
-    QStringList sessionFiles = m_sessionFileLookup.values(obj);
-
-    if (!m_discardSessionFiles) {
-        sessionFiles.removeLast(); // Only keep the last session file.
-    }
-
-    Q_FOREACH(const QString& sessionFile, sessionFiles) {
-      kDebug() << "Discarding session history File" << sessionFile;
-      if (!QFile::remove(sessionFile))
-          kWarning() << "Failed to discard the session history file";
-    }
-
-    m_sessionFileLookup.remove(obj);
+    // kDebug() << "Removing cached history data of" << object;
+    m_historyBufContainer.remove(object);
 }
+
 
 K_EXPORT_PLUGIN(KWebKitFactory)
 
